--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ Assets/External/MeshBaker/
 Assets/Scenes/MapDataScene.unity*
 Assets/Scenes/MapDataSceneTakamatsu.unity*
 Assets/Scenes/MapDataSceneTakamatsuRaw.unity*
+Assets/AddressableAssetsData/link.xml
+Assets/AddressableAssetsData/link.xml.meta
