--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.netcode.gameobjects": "1.7.0",
     "com.unity.render-pipelines.universal": "12.1.12",
+    "com.unity.services.relay": "1.0.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
